Make setting element.style.foo just parse the value instead of creating a property:value pair and parsing that.  Speeds up setting of element.style.top by about 5%.  Bug 99797, r=attinasi, sr=jst